[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/PlayerNew.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/idle1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/idle2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/idle3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/running1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/running2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/running3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/running4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/running5.png" type="Texture" id=9]
[ext_resource path="res://Scripts/GunController.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Bullets/PlayerBullet.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/gun.png" type="Texture" id=12]
[ext_resource path="res://Sound/Shoot.wav" type="AudioStream" id=13]
[ext_resource path="res://Sound/PlayerHit.wav" type="AudioStream" id=14]
[ext_resource path="res://Sound/Pickup.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Running",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]

resource_name = "Invencibility"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.431373 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.431373 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.431373 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 13.1767

[sub_resource type="CapsuleShape2D" id=4]

custom_solver_bias = 0.0
radius = 16.0
height = 19.0

[node name="Player" type="KinematicBody2D"]
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )
SPEED = 200
ACCELERATION = 20
DE_ACCELERATION = 15
HEALTH = 10
SHOOT_SPEED = 0.3

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Idle"
frame = 1

[node name="Anim" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Invencibility = SubResource( 2 )
blend_times = [  ]

[node name="GunRoot" type="Position2D" parent="."]
position = Vector2( 0, -32 )
script = ExtResource( 10 )
Bullet = ExtResource( 11 )

[node name="GunSprite" type="Sprite" parent="GunRoot"]
position = Vector2( 35, 6.37 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
flip_h = true

[node name="ShootPoint" type="Position2D" parent="GunRoot"]
position = Vector2( 52.472, 0 )
scale = Vector2( 2, 2 )

[node name="GunTimer" type="Timer" parent="GunRoot"]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Shoot" type="AudioStreamPlayer2D" parent="GunRoot"]
position = Vector2( 0, 32 )
stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11.77 )
shape = SubResource( 3 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Heal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="hitbox" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, -24.23 )
shape = SubResource( 4 )

[node name="HitStun" type="Timer" parent="."]
process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[connection signal="animation_finished" from="Sprite/Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="timeout" from="GunRoot/GunTimer" to="GunRoot" method="_on_GunTimer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
